# pcr

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE-METADATA.toml  SECURITY.md  THIRD_PARTY_NOTICES.md  build.rs  deny.toml  plan.md  report.md  report.xml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  native_networking_failure.yml
.github/workflows/: ci.yml  fuzz.yml  linux-live-qualification.yml  macos-live-qualification.yml  native-e2e.yml  native-linux.yml  parity-qualification.yml  qualification.yml  rc-security-audit.yml  release.yml  security-waivers.yml  windows-qualification.yml
api/: README.md  packetcraftr-public-api.txt  packetcraftr-v0.2-beta.txt
benches/: packet_pipeline.rs  reassembly.rs  workflow_scan.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  lib.rs
crates/core/src/core/: build.rs  dissect.rs  document.rs  expression.rs  layer.rs  mod.rs  packet.rs  registry.rs  value.rs
crates/io/: Cargo.toml  README.md
crates/io/src/: lib.rs
crates/io/src/io/: mod.rs  neighbor.rs  pcap.rs  provider.rs  route.rs
crates/io/src/io/platform/: live_capture.rs  macos.rs  mod.rs  npcap.rs  pcap_backend.rs  pnet_enumeration.rs  raw_ip.rs  windows.rs
crates/protocols/: Cargo.toml  README.md
crates/protocols/src/: lib.rs
crates/protocols/src/protocols/: capture_link.rs  matcher.rs  mod.rs  support.rs
crates/session/: Cargo.toml  README.md
crates/session/src/: lib.rs
crates/session/src/session/: fragment.rs  mod.rs
docs/: README.md  RELEASING.md  beta-feedback.md  beta-gate.md  capture-replay.md  ci-baseline.md  cli-contract.md  cli-examples.md  dns.md  fuzz.md  install-and-release.md  installation.md  linux-live-qualification.md  macos-live-qualification.md  migration-output-v1-v2.md  migration-v0.1-to-v0.2.md  native-e2e.md  operator-library-manual.md  parity-qualification.md  platform-support.md  protocol-support.md  public-api.md  rc-security-audit.md  refactor-baseline.md  scan.md  traceroute.md  windows-qualification.md
docs/adr/: 0001-portable-kernel-and-registry.md  0002-wire-intent-and-live-safety.md  0003-capture-and-exchange-ownership.md  0004-component-and-native-adapter-boundaries.md  0005-active-neighbor-resolution.md  0006-native-raw-ip-transmission.md  0007-typed-cli-output-contracts.md  README.md
docs/governance/: review-ownership.md
docs/releases/: 0.2.0-beta.1.md.in  0.2.0-rc.1.md.in  0.2.0.md.in
docs/roadmap/: 0.4.0-beta.2-phase-0.md
docs/security/: RUSTSEC-2024-0436.md
examples/: live_qualification_peer.rs
examples/documents/: output-build-error.json  output-build-success.json  output-capture-error.json  output-capture-event.json  output-dissect-error.json  output-dissect-success.json  output-dns-complete.json  output-dns-error.json  output-dns-event.json  output-dns-success.json  output-doctor-error.json  output-doctor-success.json  output-exchange-error.json  output-exchange-event.json  output-exchange-success.json  output-fuzz-complete.json  output-fuzz-error.json  output-fuzz-event.json  output-fuzz-success.json  output-interfaces-error.json  output-interfaces-success.json  output-plan-error.json  output-plan-success.json  output-read-error.json  output-read-event.json  output-replay-error.json  output-replay-event.json  output-replay-success.json  output-routes-error.json  output-routes-success.json  output-scan-complete.json  output-scan-error.json  output-scan-event.json  output-scan-success.json  output-send-error.json  output-send-success.json  output-stream-start.json  output-traceroute-complete.json  output-traceroute-error.json  output-traceroute-event.json  (+5 more)
fuzz/: Cargo.toml
fuzz/corpus/capture_reader/: empty
fuzz/corpus/decode_roundtrip/: raw
fuzz/corpus/dns_wire/: header
fuzz/corpus/packet_inputs/: expression
fuzz/corpus/reassembly_state/: commands
fuzz/dictionaries/: capture_reader.dict  decode_roundtrip.dict  dns_wire.dict  packet_inputs.dict  reassembly_state.dict
fuzz/fuzz_targets/: capture_reader.rs  decode_roundtrip.rs  dns_wire.rs  packet_inputs.rs  reassembly_state.rs
schemas/: README.md  packetcraftr.fixture-provenance.v1.schema.json  packetcraftr.output.v1.schema.json  packetcraftr.output.v2.schema.json  packetcraftr.packet.v1.schema.json
scripts/: audit-rc-readiness.sh  beta-gate-requirements.txt  build-release-inputs.sh  check-architecture.sh  check-beta-gate.sh  check-cli-contract.py  check-documentation-examples.py  check-fixture-changes.sh  check-public-api.py  check-release-metadata.py  check-rustsec-waivers.py  check-schemas.sh  compare-parity-evidence.py  generate-parity-evidence.py  linux-live-peer.py  native-netns.sh  package-release.ps1  package-release.sh  public-api-diff  qualify-linux-live.sh  qualify-macos-live.sh  qualify-windows-hosted.py  qualify-windows-live.py  rc-package-patches.toml  render-release-notes.py  rss-gate.sh  seed-fixture-corpus.py  test-fixture-policy.py  test-native-e2e  validate-fixture-corpus.py  verify-agent.sh  verify-linux-live-evidence.py  verify-macos-live-evidence.py  verify-qualification.py  verify-rc-audit.py  verify-release-archive.sh  verify-windows-hosted-evidence.py  verify-windows-live-evidence.py
scripts/tests/: test_check_rustsec_waivers.py
src/: app.rs  cli.rs  cli_api.rs  client.rs  error.rs  lib.rs  main.rs  operation.rs  output.rs  v2_cli.rs
src/app/: cli_mapping.rs  (+6 more)
tests/: architecture.rs  cli.rs  cli_regressions.rs  cli_v2.rs  component_facade.rs  document_examples.rs  documentation.rs  domain_contract_paths.rs  engine.rs  external_dns.rs  external_fuzz.rs  external_output.rs  external_protocol.rs  external_provider.rs  external_replay.rs  external_scan.rs  external_traceroute.rs  fixture_corpus.rs  layer_boundaries.rs  package_metadata.rs  packet_spec.rs  public_surface.rs  reassembly_properties.rs  rule_send_contract.rs  schema_contract.rs  source_size.rs  source_size_baseline.txt  transmission_planning.rs  unsafe_boundary.rs  workflow_consolidation.rs
(+668 files in other folders)
