[workspace]
members = [
    ".",
    "crates/core",
    "crates/io",
    "crates/protocols",
    "crates/session",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.96"
license = "AGPL-3.0-only"

[workspace.lints.rust]
unsafe_code = "deny"

[package]
name = "packetcraftr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[features]
default = ["live"]
live = ["packetcraftr-io/live"]
native-route = ["packetcraftr-io/native-route"]
native-layer2 = ["live", "packetcraftr-io/native-layer2"]
native-layer3 = ["live", "packetcraftr-io/native-layer3"]

[dependencies]
bytes = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
packetcraftr-core = { path = "crates/core" }
packetcraftr-io = { path = "crates/io", default-features = false }
packetcraftr-protocols = { path = "crates/protocols" }
packetcraftr-session = { path = "crates/session" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
