[package]
name = "packetcraftr"
version = "0.2.0"
edition = "2021"
resolver = "2"
rust-version = "1.96"
license = "AGPL-3.0-only"
publish = false

[lints.rust]
unsafe_code = "deny"

[features]
default = ["live"]
live = ["dep:pnet"]
native-route = [
    "dep:futures-util",
    "dep:libc",
    "dep:rtnetlink",
    "dep:socket2",
    "dep:tokio",
    "dep:windows",
]
native-layer2 = ["live", "dep:libloading", "dep:pcap", "dep:windows"]
native-layer3 = ["live", "dep:socket2", "dep:windows"]

[dependencies]
bytes = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
noyalib = { version = "0.0.5", features = ["compat-serde-yaml"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
thiserror = "2"

[target.'cfg(not(windows))'.dependencies]
pnet = { version = "0.35", default-features = false, features = ["std"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
futures-util = { version = "0.3", default-features = false, features = ["async-await", "std"], optional = true }
pcap = { version = "2.4", default-features = false, optional = true }
rtnetlink = { version = "0.21", default-features = false, features = ["tokio_socket"], optional = true }
socket2 = { version = "0.6", default-features = false, features = ["all"], optional = true }
tokio = { version = "1", default-features = false, features = ["net", "rt"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { version = "0.2", default-features = false, optional = true }
pcap = { version = "2.4", default-features = false, optional = true }
socket2 = { version = "0.6", default-features = false, features = ["all"], optional = true }

[target.'cfg(windows)'.dependencies]
libloading = { version = "0.8", default-features = false, optional = true }
socket2 = { version = "0.6", default-features = false, features = ["all"], optional = true }
windows = { version = "0.62", default-features = false, features = [
    "std",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
], optional = true }
