[package]
name = "packetcraftr"
version = "0.2.0"
description = "Rust library and CLI for building, dissecting, capturing, and testing network packets"
edition = "2024"
resolver = "2"
rust-version = "1.96"
license = "AGPL-3.0-only"
repository = "https://github.com/tyk-swe/pcr"
publish = false

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"

[profile.release]
# Packet offsets, lengths, and accounting must fail closed in optimized builds
# just as they do in development and CI profiles.
overflow-checks = true

[features]
default = ["live"]
live = ["dep:pnet_datalink", "dep:windows"]
native-route = [
    "dep:futures-util",
    "dep:libc",
    "dep:rtnetlink",
    "dep:socket2",
    "dep:tokio",
    "dep:windows",
]
native-layer2 = ["live", "dep:libloading", "dep:pcap", "dep:windows"]
native-layer3 = ["live", "dep:socket2", "dep:windows"]

[dependencies]
bytes = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
noyalib = { version = "0.0.15", features = ["compat-serde-yaml"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
thiserror = "2"

[target.'cfg(not(windows))'.dependencies]
pnet_datalink = { version = "0.35", default-features = false, features = ["std"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
futures-util = { version = "0.3", default-features = false, features = ["async-await", "std"], optional = true }
pcap = { version = "2.4", default-features = false, optional = true }
rtnetlink = { version = "0.21", default-features = false, features = ["tokio_socket"], optional = true }
socket2 = { version = "0.6", default-features = false, features = ["all"], optional = true }
tokio = { version = "1", default-features = false, features = ["net", "rt"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { version = "0.2", default-features = false, optional = true }
pcap = { version = "2.4", default-features = false, optional = true }
socket2 = { version = "0.6", default-features = false, features = ["all"], optional = true }

[target.'cfg(windows)'.dependencies]
libloading = { version = "0.9", default-features = false, features = ["std"], optional = true }
socket2 = { version = "0.6", default-features = false, features = ["all"], optional = true }
windows = { version = "0.62", default-features = false, features = [
    "std",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
], optional = true }

[dev-dependencies]
jsonschema = { version = "0.47", default-features = false }
