[package]
name = "packetcraftr-protocols"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Built-in protocol codecs and matchers for PacketcraftR"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bytes = "1"
packetcraftr-core = { version = "=0.2.0-alpha.1", path = "../core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
