[package]
name = "packetcraftr-protocols"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bytes = "1"
packetcraftr-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
